--- a/frontend/events.html
+++ b/frontend/events.html
@@ -1,74 +1,610 @@
-<!-- HTML STARTS -->
-<!DOCTYPE html>
+<!DOCTYPE html>More actions
 <html lang="en">
 <head>
   <!-- Basic Metadata -->
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- Responsive for mobile -->
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Holy Spirit Prayer House - A place for faith, love, and community outreach.">
   <meta name="keywords" content="Church, Holy Spirit, Prayer, Ministries, Donations">
   <meta name="author" content="Holy Spirit Prayer House">
   <title>Holy Spirit Prayer House | హోలీ స్పిరిట్ ప్రార్థన మందిరం</title>
-  <link rel="icon" type="image/png" href="images/favicon.png"> <!-- Site tab icon -->
 
-  <!-- Google Fonts (used throughout the site) -->
-  <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet"> <!-- Title font -->
-  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet"> <!-- Body font -->
-  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Sans+Telugu&display=swap" rel="stylesheet"> <!-- Telugu font -->
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Sans+Telugu&display=swap" rel="stylesheet">
 
-  <!-- External Stylesheets -->
-  <link rel="stylesheet" href="css/styles.css">        <!-- Main layout and styling -->
-  <link rel="stylesheet" href="css/founder.css">       <!-- Founder section styles -->
-  <link rel="stylesheet" href="css/chatbot.css">       <!-- Chatbot button & popup styles -->
+<style>
+    /* ==============================================
+       HEADER STYLES
+    ============================================== */
 
-  <!-- Language Toggle Script -->
-  <script>
-    // Save selected language to localStorage and apply it to <body>
-    function toggleLanguage(lang) {
-      localStorage.setItem("preferredLanguage", lang);
-      document.body.classList.remove("english", "telugu");
-      document.body.classList.add(lang);
-    }
-
-    // Load saved language on page load
-    document.addEventListener("DOMContentLoaded", function() {
-      const savedLang = localStorage.getItem("preferredLanguage") || "english";
-      document.body.classList.remove("english", "telugu");
-      document.body.classList.add(savedLang);
-    });
-  </script>
-
-  <!-- Inline Style for Language Toggle + Default Appearance -->
-  <style>
+    /* Language Toggle Styles */
     .language-toggle {
-      text-align: center;            /* Center the language buttons */
-      padding: 20px 0;               /* Vertical space */
+      text-align: center;
+      padding: 20px 0;
+      background: linear-gradient(135deg, #000000 0%, #333333 100%);
     }
 
     .language-toggle button {
-      margin: 0 5px;                 /* Space between buttons */
-      padding: 8px 16px;             /* Button padding */
+      margin: 0 5px;
+      padding: 8px 16px;
       font-size: 14px;
       cursor: pointer;
-      border: none;
-      background-color: #fff;        /* Bright white background */
+      border: 2px solid #dc2626;
+      background-color: #fff;
       font-family: 'Roboto', sans-serif;
-      color: #5f6368;
-      border-radius: 4px;
-      transition: background-color 0.3s, box-shadow 0.3s;
+      color: #dc2626;
+      border-radius: 25px;
+      transition: all 0.3s ease;
+      box-shadow: 0 2px 10px rgba(220,38,38,0.2);
     }
 
     .language-toggle button:hover {
-      background-color: #f8f9fa;     /* Light grey on hover */
-      box-shadow: 0 1px 2px rgba(0,0,0,0.1); /* Soft shadow */
+      background-color: #dc2626;
+      color: white;
+      transform: translateY(-2px);
+      box-shadow: 0 4px 15px rgba(220,38,38,0.4);
     }
 
-    /* Language toggle behavior: show only selected language */
-    .telugu .english-text { display: none; }  /* Hide English when Telugu is active */
-    .english .telugu-text { display: none; }  /* Hide Telugu when English is active */
+    /* Language Visibility Rules */
+    .telugu .english-text { display: none; }
+    .english .telugu-text { display: none; }
+
+    /* Header Styles */
+    #mainHeader {
+      background: linear-gradient(135deg, #dc2626 0%, #000000 100%);
+      box-shadow: 0 4px 20px rgba(220,38,38,0.3);
+      position: sticky;
+      top: 0;
+      z-index: 1000;
+    }
+
+    .header-container {
+      max-width: 1200px;
+      margin: 0 auto;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding: 1rem;
+    }
+
+    .logo img {
+      height: 50px;
+      width: auto;
+      border-radius: 50%;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.2);
+    }
+
+    .desktop-nav {
+      display: flex;
+    }
+
+    .nav-links {
+      display: flex;
+      list-style: none;
+      margin: 0;
+      padding: 0;
+      gap: 1rem;
+    }
+
+    .nav-links a {
+      color: white;
+      text-decoration: none;
+      padding: 10px 15px;
+      border-radius: 25px;
+      transition: all 0.3s ease;
+      font-weight: 500;
+    }
+
+    .nav-links a:hover {
+      background: rgba(220,38,38,0.3);
+      transform: translateY(-2px);
+    }
+
+    .donate-btn {
+      background: linear-gradient(135deg, #dc2626 0%, #b91c1c 100%) !important;
+      color: white !important;
+      font-weight: bold;
+      box-shadow: 0 4px 15px rgba(220,38,38,0.4);
+    }
+
+    .mobile-menu-button {
+      display: none;
+      background: rgba(220,38,38,0.3);
+      border: 2px solid #dc2626;
+      color: white;
+      font-size: 1.5rem;
+      padding: 10px;
+      border-radius: 5px;
+      cursor: pointer;
+    }
+
+    .mobile-nav {
+      display: none;
+      background: linear-gradient(135deg, rgba(220,38,38,0.95) 0%, rgba(0,0,0,0.95) 100%);
+      position: absolute;
+      top: 100%;
+      left: 0;
+      right: 0;
+      backdrop-filter: blur(10px);
+    }
+
+    .mobile-nav.active {
+      display: block;
+    }
+
+    .mobile-nav .nav-links {
+      flex-direction: column;
+      padding: 1rem;
+    }
+
+
+
+    /* Main Content Area */
+    .main-content {
+      max-width: 1000px;
+      margin: 40px auto;
+      padding: 0 20px;
+    }
+
+    .content-card {
+      background: #f8f8f8;
+      border-radius: 15px;
+      padding: 60px 50px;
+      box-shadow: 0 10px 40px rgba(0,0,0,0.2);
+      margin: 20px 0;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .content-card::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 5px;
+      background: linear-gradient(45deg, #8B0000, #DC143C);
+    }
+
+    .section-title {
+      font-size: 3.5rem;
+      font-weight: 700;
+      color: #8B0000;
+      text-align: center;
+      margin-bottom: 30px;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      text-shadow: 2px 2px 4px rgba(0,0,0,0.1);
+    }
+
+    .section-content {
+      font-size: 1.2rem;
+      line-height: 1.8;
+      color: #444;
+      text-align: center;
+      margin-bottom: 40px;
+    }
+
+    .bible-verse {
+      background: linear-gradient(135deg, #8B0000, #DC143C);
+      color: #fff;
+      padding: 25px 30px;
+      border-radius: 10px;
+      font-style: italic;
+      font-size: 1.1rem;
+      text-align: center;
+      margin: 30px 0;
+      box-shadow: 0 5px 20px rgba(139,0,0,0.3);
+    }
+
+    .mission-title {
+      font-size: 3rem;
+      font-weight: 700;
+      color: #8B0000;
+      text-align: center;
+      margin-bottom: 25px;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+    }
+
+
+/* ==============================================
+       FOUNDER SECTION STYLES
+    ============================================== */
+
+    .founders-section {
+      background: linear-gradient(135deg, #000000 0%, #dc2626 50%, #000000 100%);
+      padding: 2rem 0;
+      margin-top: 2rem;
+      border-top: 1px solid #dc2626;
+      border-bottom: 1px solid #dc2626;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .founders-section::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      bottom: 0;
+      background: radial-gradient(circle at 50% 50%, rgba(220,38,38,0.1) 0%, transparent 70%);
+      pointer-events: none;
+    }
+
+    .founder-container {
+      max-width: 900px;
+      margin: 0 auto;
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 2rem;
+      padding: 0 1.5rem;
+    }
+
+    .founder, .co-founder {
+      text-align: center;
+      background: rgba(255,255,255,0.98);
+      padding: 1.5rem;
+      border-radius: 12px;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.15);
+      transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      border: 1px solid transparent;
+      position: relative;
+      overflow: hidden;
+    }
+
+    .founder::before, .co-founder::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -100%;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(90deg, transparent, rgba(220,38,38,0.1), transparent);
+      transition: left 0.5s ease;
+    }
+
+    .founder:hover::before, .co-founder:hover::before {
+      left: 100%;
+    }
+
+    .founder:hover, .co-founder:hover {
+      transform: translateY(-8px) scale(1.02);
+      box-shadow: 0 20px 40px rgba(220,38,38,0.25);
+      border: 2px solid #dc2626;
+    }
+
+    .founder-img {
+      width: 90px;
+      height: 90px;
+      border-radius: 50%;
+      object-fit: cover;
+      margin: 0 auto 1rem;
+      border: 3px solid #dc2626;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      transition: all 0.3s ease;
+    }
+
+    .founder:hover .founder-img, .co-founder:hover .founder-img {
+      transform: scale(1.05);
+      box-shadow: 0 12px 25px rgba(220,38,38,0.4);
+    }
+
+    .founder h2, .co-founder h2 {
+      color: #dc2626;
+      margin-bottom: 0.4rem;
+      font-size: 1.1rem;
+      font-weight: 600;
+    }
+
+    .founder h3, .co-founder h3 {
+      color: #333333;
+      font-weight: 500;
+      font-size: 1rem;
+      margin-bottom: 0;
+    }
+
+    /* ==============================================
+       CHATBOT STYLES
+    ============================================== */
+
+    .chatbot-button {
+      position: fixed;
+      bottom: 25px;
+      right: 25px;
+      background: linear-gradient(135deg, #dc2626 0%, #b91c1c 50%, #000000 100%);
+      border: 2px solid #dc2626;
+      border-radius: 60px;
+      padding: 18px 25px;
+      box-shadow: 0 10px 30px rgba(220,38,38,0.3);
+      cursor: pointer;
+      z-index: 1000;
+      transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    }
+
+    .chatbot-button:hover {
+      transform: translateY(-8px) scale(1.05);
+      box-shadow: 0 20px 45px rgba(220,38,38,0.5);
+      background: linear-gradient(135deg, #b91c1c 0%, #991b1b 50%, #000000 100%);
+    }
+
+    .chatbot-button:active {
+      transform: translateY(-5px) scale(1.02);
+    }
+
+    .chatbot-wrapper {
+      display: flex;
+      align-items: center;
+      color: white;
+      font-weight: 600;
+    }
+
+    .chatbot-wrapper img {
+      width: 45px;
+      height: 45px;
+      border-radius: 50%;
+      margin-right: 12px;
+      border: 2px solid rgba(255,255,255,0.3);
+    }
+
+    .chatbot-popup {
+      position: fixed;
+      bottom: 100px;
+      right: 25px;
+      width: 380px;
+      height: 500px;
+      background: white;
+      border-radius: 20px;
+      box-shadow: 0 25px 50px rgba(0,0,0,0.15);
+      z-index: 1001;
+      overflow: hidden;
+      transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      border: 1px solid rgba(220,38,38,0.1);
+    }
+
+    .chatbot-popup.hidden {
+      display: none;
+    }
+
+    .chatbot-header {
+      background: linear-gradient(135deg, #dc2626 0%, #b91c1c 50%, #000000 100%);
+      color: white;
+      padding: 20px;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      box-shadow: 0 2px 10px rgba(0,0,0,0.1);
+    }
+
+    .close-button {
+      background: none;
+      border: none;
+      color: white;
+      font-size: 1.8rem;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      padding: 5px;
+      border-radius: 50%;
+    }
+
+    .close-button:hover {
+      background: rgba(255,255,255,0.2);
+      transform: scale(1.1);
+    }
+
+    /* ==============================================
+       FOOTER STYLES
+    ============================================== */
+
+    footer {
+      background: linear-gradient(135deg, #000000 0%, #1a1a1a 50%, #333333 100%);
+      color: white;
+      padding: 1rem 0;
+      text-align: center;
+      position: relative;
+    }
+
+    footer::before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: 0;
+      right: 0;
+      height: 1px;
+      background: linear-gradient(90deg, transparent, #dc2626, transparent);
+    }
+
+    .footer-container {
+      max-width: 1000px;
+      margin: 0 auto;
+      padding: 0 1.5rem;
+    }
+
+    .social-icons {
+      margin-top: 1.5rem;
+      display: flex;
+      justify-content: center;
+      gap: 1.5rem;
+    }
+
+    .social-icons a {
+      display: inline-block;
+      transition: transform 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      position: relative;
+    }
+
+    .social-icons a:hover {
+      transform: translateY(-5px);
+    }
+
+    .social-icons img {
+      width: 45px;
+      height: 45px;
+      border-radius: 12px;
+      box-shadow: 0 6px 20px rgba(220,38,38,0.2);
+      border: 2px solid transparent;
+      transition: all 0.4s ease;
+    }
+
+    .social-icons img:hover {
+      border: 2px solid #dc2626;
+      transform: scale(1.15);
+      box-shadow: 0 10px 30px rgba(220,38,38,0.4);
+    }
+
+    /* ==============================================
+       ANIMATIONS
+    ============================================== */
+
+    @keyframes fadeInUp {
+      from {
+        opacity: 0;
+        transform: translateY(40px);
+      }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
+
+    @keyframes pulse {
+      0%, 100% {
+        transform: scale(1);
+      }
+      50% {
+        transform: scale(1.05);
+      }
+    }
+
+    @keyframes slideInFromRight {
+      from {
+        opacity: 0;
+        transform: translateX(50px);
+      }
+      to {
+        opacity: 1;
+        transform: translateX(0);
+      }
+    }
+
+    /* ==============================================
+       RESPONSIVE DESIGN
+    ============================================== */
+
+    @media (max-width: 768px) {
+      .desktop-nav {
+        display: none;
+      }
+
+      .mobile-menu-button {
+        display: block;
+      }
+
+      .page-title {
+        font-size: 2.2rem;
+      }
+
+      .hero p {
+        font-size: 1.1rem;
+      }
+
+      .section-container {
+        grid-template-columns: 1fr;
+        margin: 2rem auto;
+      }
+
+      .founder-container {
+        grid-template-columns: 1fr;
+        gap: 2rem;
+        padding: 0 1rem;
+      }
+
+      .chatbot-popup {
+        width: 95vw;
+        right: 2.5vw;
+        height: 450px;
+      }
+
+      .chatbot-button {
+        bottom: 20px;
+        right: 20px;
+        padding: 15px 20px;
+      }
+
+      .chatbot-wrapper img {
+        width: 40px;
+        height: 40px;
+      }
+
+      .social-icons {
+        gap: 1rem;
+      }
+
+      .social-icons img {
+        width: 40px;
+        height: 40px;
+      }
+    }
+
+    @media (max-width: 480px) {
+      .founders-section {
+        padding: 2rem 0;
+      }
+
+      .founder, .co-founder {
+        padding: 1.5rem;
+      }
+
+      .founder-img {
+        width: 100px;
+        height: 100px;
+      }
+
+      .chatbot-popup {
+        height: 400px;
+      }
+    }
+
+    /* Global Styles */
+    * {
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+    }
+
+    body {
+      font-family: 'Roboto', sans-serif;
+      line-height: 1.6;
+      background: linear-gradient(135deg, #f8f9fa 0%, #e9ecef 50%, #dee2e6 100%);
+      scroll-behavior: smooth;
+    }
+
+    /* ==============================================
+       ADDITIONAL ENHANCEMENTS
+    ============================================== */
+
+    .fade-in {
+      animation: fadeInUp 0.8s ease-out;
+    }
+
+    .slide-in-right {
+      animation: slideInFromRight 0.6s ease-out;
+    }
+
+    .pulse-animation {
+      animation: pulse 2s infinite;
+    }
   </style>
 </head>
+
 <body class="english">
+
+  <!-- ==============================================
+       HEADER SECTION
+  ============================================== -->
 
   <!-- Language Switcher UI -->
   <div class="language-toggle">
@@ -76,18 +612,16 @@
     <button onclick="toggleLanguage('telugu')">తెలుగు</button>
   </div>
 
-  <!-- Header Section: Logo + Navigation (Desktop + Mobile) -->
+  <!-- Header Section: Logo + Navigation -->
   <header id="mainHeader">
     <div class="header-container">
       <div class="logo">
         <img src="images/logo.webp" alt="Holy Spirit Prayer House Logo">
       </div>
       <nav class="desktop-nav">
-        <!-- Top navigation links (English + Telugu) -->
         <ul class="nav-links">
-          <!-- Each link contains two spans: English & Telugu -->
           <li><a href="index.html"><span class="english-text">Home</span><span class="telugu-text">హోమ్</span></a></li>
-          <li><a href="about.html"><span class="english-text">About</span><span class="telugu-text">గురించి</span></a></li>
+          <li><a href="about.html" style="color: #ffe4e1;"><span class="english-text">About</span><span class="telugu-text">గురించి</span></a></li>
           <li><a href="sermons.html"><span class="english-text">Sermons</span><span class="telugu-text">ప్రసంగాలు</span></a></li>
           <li><a href="ministries.html"><span class="english-text">Ministries</span><span class="telugu-text">సేవలు</span></a></li>
           <li><a href="orphanage.html"><span class="english-text">Orphanage</span><span class="telugu-text">అనాథాశ్రమం</span></a></li>
@@ -100,7 +634,7 @@
       <button id="menuButton" class="mobile-menu-button" aria-label="Open Menu">☰</button>
     </div>
 
-    <!-- Mobile version of the nav menu -->
+    <!-- Mobile Navigation -->
     <nav class="mobile-nav" id="mobileNav">
       <ul class="nav-links">
         <li><a href="index.html"><span class="english-text">Home</span><span class="telugu-text">హోమ్</span></a></li>
@@ -111,7 +645,7 @@
         <li><a href="events.html"><span class="english-text">Events</span><span class="telugu-text">ఈవెంట్స్</span></a></li>
         <li><a href="contact.html"><span class="english-text">Contact</span><span class="telugu-text">సంప్రదించండి</span></a></li>
         <li><a href="volunteer.html"><span class="english-text">Get Involved</span><span class="telugu-text">చేరడం</span></a></li>
-        <li><a href="donate.html" class="donate-btn"><span class="english-text">Donate Now</span><span class="telugu-text">దానం చేయండి</span></a></li>
+        <li><a href="donate.html" class="donate-btn"><span class="english-text">Donate Now</span><span class="telugu-text">దానం చేయండি</span></a></li>
       </ul>
     </nav>
   </header>
