--- a/frontend/about.html
+++ b/frontend/about.html
@@ -13,7 +13,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500&display=swap" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans&family=Noto+Sans+Telugu&display=swap" rel="stylesheet">
-
+  
 <style>
     /* ==============================================
        HEADER STYLES
@@ -139,11 +139,9 @@
       padding: 1rem;
     }
 
-
-
     /* Main Content Area */
     .main-content {
-      max-width: 1000px;
+      max-width: 1200px;
       margin: 40px auto;
       padding: 0 20px;
     }
@@ -199,16 +197,172 @@
       box-shadow: 0 5px 20px rgba(139,0,0,0.3);
     }
 
-    .mission-title {
-      font-size: 3rem;
-      font-weight: 700;
-      color: #8B0000;
-      text-align: center;
-      margin-bottom: 25px;
-      text-transform: uppercase;
-      letter-spacing: 2px;
+    /* ==============================================
+       SERMONS CONTENT STYLES
+    ============================================== */
+
+    .sermons-container {
+      display: grid;
+      gap: 2rem;
+      margin-top: 2rem;
     }
 
+    .sermon-section {
+      background: white;
+      border-radius: 15px;
+      padding: 2rem;
+      box-shadow: 0 8px 25px rgba(0,0,0,0.1);
+      border-left: 5px solid #dc2626;
+    }
+
+    .sermon-section h2 {
+      color: #8B0000;
+      font-size: 2rem;
+      margin-bottom: 1rem;
+      text-align: center;
+      border-bottom: 2px solid #dc2626;
+      padding-bottom: 0.5rem;
+    }
+
+    .video-grid {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+      gap: 1.5rem;
+      margin-top: 1.5rem;
+    }
+
+    .video-card {
+      background: #fff;
+      border-radius: 10px;
+      overflow: hidden;
+      box-shadow: 0 5px 15px rgba(0,0,0,0.1);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .video-card:hover {
+      transform: translateY(-5px);
+      box-shadow: 0 10px 25px rgba(220,38,38,0.2);
+    }
+
+    .video-wrapper {
+      position: relative;
+      width: 100%;
+      height: 200px;
+      overflow: hidden;
+    }
+
+    .video-wrapper iframe {
+      width: 100%;
+      height: 100%;
+      border: none;
+    }
+
+    .video-info {
+      padding: 1rem;
+    }
+
+    .video-title {
+      font-size: 1.1rem;
+      font-weight: 600;
+      color: #333;
+      margin-bottom: 0.5rem;
+      line-height: 1.4;
+    }
+
+    .video-description {
+      font-size: 0.9rem;
+      color: #666;
+      line-height: 1.5;
+    }
+
+    .social-feed-section {
+      background: white;
+      border-radius: 15px;
+      padding: 2rem;
+      box-shadow: 0 8px 25px rgba(0,0,0,0.1);
+      border-left: 5px solid #dc2626;
+      margin-top: 2rem;
+    }
+
+    .social-tabs {
+      display: flex;
+      justify-content: center;
+      margin-bottom: 2rem;
+      gap: 1rem;
+    }
+
+    .social-tab {
+      padding: 0.75rem 1.5rem;
+      border: 2px solid #dc2626;
+      background: white;
+      color: #dc2626;
+      border-radius: 25px;
+      cursor: pointer;
+      transition: all 0.3s ease;
+      font-weight: 500;
+    }
+
+    .social-tab.active,
+    .social-tab:hover {
+      background: #dc2626;
+      color: white;
+    }
+
+    .social-content {
+      display: none;
+      text-align: center;
+    }
+
+    .social-content.active {
+      display: block;
+    }
+
+    .social-embed {
+      max-width: 100%;
+      margin: 0 auto;
+    }
+
+    .cta-section {
+      background: linear-gradient(135deg, #8B0000, #DC143C);
+      color: white;
+      padding: 2rem;
+      border-radius: 15px;
+      text-align: center;
+      margin-top: 2rem;
+    }
+
+    .cta-buttons {
+      display: flex;
+      justify-content: center;
+      gap: 1rem;
+      margin-top: 1.5rem;
+      flex-wrap: wrap;
+    }
+
+    .cta-button {
+      display: inline-flex;
+      align-items: center;
+      gap: 0.5rem;
+      padding: 0.75rem 1.5rem;
+      background: white;
+      color: #dc2626;
+      text-decoration: none;
+      border-radius: 25px;
+      font-weight: 600;
+      transition: all 0.3s ease;
+      box-shadow: 0 4px 15px rgba(0,0,0,0.1);
+    }
+
+    .cta-button:hover {
+      transform: translateY(-2px);
+      box-shadow: 0 6px 20px rgba(0,0,0,0.2);
+      background: #f8f9fa;
+    }
+
+    .cta-button svg {
+      width: 20px;
+      height: 20px;
+    }
 
 /* ==============================================
        FOUNDER SECTION STYLES
@@ -216,10 +370,10 @@
 
     .founders-section {
       background: linear-gradient(135deg, #000000 0%, #dc2626 50%, #000000 100%);
-      padding: 2rem 0;
+      padding: 3rem 0;
       margin-top: 2rem;
-      border-top: 1px solid #dc2626;
-      border-bottom: 1px solid #dc2626;
+      border-top: 3px solid #dc2626;
+      border-bottom: 3px solid #dc2626;
       position: relative;
       overflow: hidden;
     }
@@ -236,22 +390,22 @@
     }
 
     .founder-container {
-      max-width: 900px;
+      max-width: 800px;
       margin: 0 auto;
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-      gap: 2rem;
-      padding: 0 1.5rem;
+      gap: 2.5rem;
+      padding: 0 2rem;
     }
 
     .founder, .co-founder {
       text-align: center;
       background: rgba(255,255,255,0.98);
-      padding: 1.5rem;
-      border-radius: 12px;
-      box-shadow: 0 4px 15px rgba(0,0,0,0.15);
-      transition: all 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
-      border: 1px solid transparent;
+      padding: 2rem;
+      border-radius: 15px;
+      box-shadow: 0 10px 30px rgba(0,0,0,0.15);
+      transition: all 0.4s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+      border: 2px solid transparent;
       position: relative;
       overflow: hidden;
     }
@@ -278,33 +432,33 @@
     }
 
     .founder-img {
-      width: 90px;
-      height: 90px;
+      width: 120px;
+      height: 120px;
       border-radius: 50%;
       object-fit: cover;
-      margin: 0 auto 1rem;
-      border: 3px solid #dc2626;
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
+      margin: 0 auto 1.5rem;
+      border: 4px solid #dc2626;
+      box-shadow: 0 8px 20px rgba(0,0,0,0.2);
       transition: all 0.3s ease;
     }
 
     .founder:hover .founder-img, .co-founder:hover .founder-img {
-      transform: scale(1.05);
+      transform: scale(1.1);
       box-shadow: 0 12px 25px rgba(220,38,38,0.4);
     }
 
     .founder h2, .co-founder h2 {
       color: #dc2626;
-      margin-bottom: 0.4rem;
-      font-size: 1.1rem;
+      margin-bottom: 0.5rem;
+      font-size: 1.3rem;
       font-weight: 600;
     }
 
     .founder h3, .co-founder h3 {
       color: #333333;
       font-weight: 500;
-      font-size: 1rem;
-      margin-bottom: 0;
+      font-size: 1.1rem;
+      margin-bottom: 1rem;
     }
 
     /* ==============================================
@@ -402,7 +556,7 @@
     footer {
       background: linear-gradient(135deg, #000000 0%, #1a1a1a 50%, #333333 100%);
       color: white;
-      padding: 1rem 0;
+      padding: 2.5rem 0;
       text-align: center;
       position: relative;
     }
@@ -413,14 +567,14 @@
       top: 0;
       left: 0;
       right: 0;
-      height: 1px;
+      height: 2px;
       background: linear-gradient(90deg, transparent, #dc2626, transparent);
     }
 
     .footer-container {
-      max-width: 1000px;
+      max-width: 1200px;
       margin: 0 auto;
-      padding: 0 1.5rem;
+      padding: 0 2rem;
     }
 
     .social-icons {
@@ -503,17 +657,12 @@
         display: block;
       }
 
-      .page-title {
-        font-size: 2.2rem;
+      .section-title {
+        font-size: 2.5rem;
       }
 
-      .hero p {
-        font-size: 1.1rem;
-      }
-
-      .section-container {
+      .video-grid {
         grid-template-columns: 1fr;
-        margin: 2rem auto;
       }
 
       .founder-container {
@@ -547,6 +696,16 @@
         width: 40px;
         height: 40px;
       }
+
+      .cta-buttons {
+        flex-direction: column;
+        align-items: center;
+      }
+
+      .social-tabs {
+        flex-direction: column;
+        align-items: center;
+      }
     }
 
     @media (max-width: 480px) {
@@ -565,6 +724,14 @@
 
       .chatbot-popup {
         height: 400px;
+      }
+
+      .content-card {
+        padding: 40px 30px;
+      }
+
+      .section-title {
+        font-size: 2rem;
       }
     }
 
@@ -621,8 +788,8 @@
       <nav class="desktop-nav">
         <ul class="nav-links">
           <li><a href="index.html"><span class="english-text">Home</span><span class="telugu-text">హోమ్</span></a></li>
-          <li><a href="about.html" style="color: #ffe4e1;"><span class="english-text">About</span><span class="telugu-text">గురించి</span></a></li>
-          <li><a href="sermons.html"><span class="english-text">Sermons</span><span class="telugu-text">ప్రసంగాలు</span></a></li>
+          <li><a href="about.html"><span class="english-text">About</span><span class="telugu-text">గురించి</span></a></li>
+          <li><a href="sermons.html" style="color: #ffe4e1;"><span class="english-text">Sermons</span><span class="telugu-text">ప్రసంగాలు</span></a></li>
           <li><a href="ministries.html"><span class="english-text">Ministries</span><span class="telugu-text">సేవలు</span></a></li>
           <li><a href="orphanage.html"><span class="english-text">Orphanage</span><span class="telugu-text">అనాథాశ్రమం</span></a></li>
           <li><a href="events.html"><span class="english-text">Events</span><span class="telugu-text">ఈవెంట్స్</span></a></li>
@@ -645,7 +812,7 @@
         <li><a href="events.html"><span class="english-text">Events</span><span class="telugu-text">ఈవెంట్స్</span></a></li>
         <li><a href="contact.html"><span class="english-text">Contact</span><span class="telugu-text">సంప్రదించండి</span></a></li>
         <li><a href="volunteer.html"><span class="english-text">Get Involved</span><span class="telugu-text">చేరడం</span></a></li>
-        <li><a href="donate.html" class="donate-btn"><span class="english-text">Donate Now</span><span class="telugu-text">దానం చేయండি</span></a></li>
+        <li><a href="donate.html" class="donate-btn"><span class="english-text">Donate Now</span><span class="telugu-text">దానం చేయండి</span></a></li>
       </ul>
     </nav>
   </header>
